Bug 98975 - Wasteland 2 Directors Cut: Hangs. GPU fault
Summary: Wasteland 2 Directors Cut: Hangs. GPU fault
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/radeonsi (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Default DRI bug account
QA Contact: Default DRI bug account
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-12-02 17:40 UTC by Sven Arvidsson
Modified: 2017-01-19 17:24 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Sven Arvidsson 2016-12-02 17:40:55 UTC
I'm having trouble with the game Wasteland 2 Directors Cut.

It sporadically freezes (most often when loading new areas) sometimes right away after starting a new game sometimes after several hours of gameplay. 

I'm getting a massive log of VM fault, GPU_fault_detected as soon as the game is launched.

#98183 and #98619 seems similar.

Probably not a regression, it's present with 4.7.0 and Mesa 12.

I also tried recording with apitrace, the trace itself doesn't seem to trigger the VM fault stuff, but I do get these warnings:


809169: message: major shader compiler issue 29: 0:14(18): warning: `tmpvar_1' used uninitialized
809169 @1 glCompileShaderARB(shaderObj = 1243)
809169: warning: 0:14(18): warning: `tmpvar_1' used uninitialized

809961: message: shader compiler issue 1: Shader Stats: SGPRS: 80 VGPRS: 16 Code Size: 92 LDS: 0 Scratch: 0 Max Waves: 10 Spilled SGPRs: 0 Spilled VGPRs: 0

System environment:
-- system architecture: 64-bit
-- Linux distribution: Debian unstable
-- GPU: TONGA
-- Model: Asus Strix R9 285 2GB
-- Display connector: DVI
-- xf86-video-amdgpu: 1.2.0
-- xserver: 1.19.0
-- mesa: c45d84ad8349d0c69893458d6c58eb5f6f1609c4
-- drm: 2.4.74
-- kernel: 4.8.0
-- dri3

dmesg:
[  409.259720] VM fault (0x04, vmid 1) at page 1653855, read from 'TC7' (0x54433700) (68)
[  409.259722] amdgpu 0000:01:00.0: GPU fault detected: 146 0x03188404
[  409.259723] amdgpu 0000:01:00.0:   VM_CONTEXT1_PROTECTION_FAULT_ADDR   0x00193C5B
[  409.259724] amdgpu 0000:01:00.0:   VM_CONTEXT1_PROTECTION_FAULT_STATUS 0x02048004
[  409.259724] VM fault (0x04, vmid 1) at page 1653851, read from 'TC6' (0x54433600) (72)
[  409.259727] amdgpu 0000:01:00.0: GPU fault detected: 146 0x03188004
[  409.259727] amdgpu 0000:01:00.0:   VM_CONTEXT1_PROTECTION_FAULT_ADDR   0x00193C57
[  409.259728] amdgpu 0000:01:00.0:   VM_CONTEXT1_PROTECTION_FAULT_STATUS 0x02048004
[  409.259729] VM fault (0x04, vmid 1) at page 1653847, read from 'TC6' (0x54433600) (72)
[  409.259731] amdgpu 0000:01:00.0: GPU fault detected: 146 0x0318c404
[  409.259732] amdgpu 0000:01:00.0:   VM_CONTEXT1_PROTECTION_FAULT_ADDR   0x00193C53
[  409.259732] amdgpu 0000:01:00.0:   VM_CONTEXT1_PROTECTION_FAULT_STATUS 0x02084004
[  409.259733] VM fault (0x04, vmid 1) at page 1653843, read from 'TC10' (0x54433130) (132)
[  409.259735] amdgpu 0000:01:00.0: GPU fault detected: 146 0x03384004
[  409.259736] amdgpu 0000:01:00.0:   VM_CONTEXT1_PROTECTION_FAULT_ADDR   0x00193C53
[  409.259737] amdgpu 0000:01:00.0:   VM_CONTEXT1_PROTECTION_FAULT_STATUS 0x02044004
[  409.259737] VM fault (0x04, vmid 1) at page 1653843, read from 'TC7' (0x54433700) (68)
[  409.259739] amdgpu 0000:01:00.0: GPU fault detected: 146 0x03384804
[  409.259740] amdgpu 0000:01:00.0:   VM_CONTEXT1_PROTECTION_FAULT_ADDR   0x00193C4B
[  409.259741] amdgpu 0000:01:00.0:   VM_CONTEXT1_PROTECTION_FAULT_STATUS 0x02004004
[  409.259741] VM fault (0x04, vmid 1) at page 1653835, read from 'TC1' (0x54433100) (4)
[  409.259743] amdgpu 0000:01:00.0: GPU fault detected: 146 0x03180004
[  409.259744] amdgpu 0000:01:00.0:   VM_CONTEXT1_PROTECTION_FAULT_ADDR   0x00193C4B
[  409.259745] amdgpu 0000:01:00.0:   VM_CONTEXT1_PROTECTION_FAULT_STATUS 0x02084004
[  409.259745] VM fault (0x04, vmid 1) at page 1653835, read from 'TC10' (0x54433130) (132)
Comment 1 Samuel Pitoiset 2017-01-19 17:24:13 UTC
Should be fixed by e490b7812cae778c61004971d86dc8299b6cd240.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.